// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.confidential_match.mrp.backend;

option java_package = "com.google.cm.mrp.backend";
option java_outer_classname = "DestinationInfoProto";

// This proto represents data destination description elements
// (such as location, identity, etc.) that are necessary to write/upload data to it.
message DestinationInfo {

  message GcsDestination {
    string output_bucket = 1;
    string output_prefix = 2;
    optional string data_owner_identity = 3;
  }

  oneof destination {
    GcsDestination gcs_destination = 1;
  }
}
